--- a/node-js/package.json
+++ b/node-js/package.json
@@ -15,6 +15,7 @@
     "prisma:pull": "prisma db pull",
     "fetch-flight-data": "tsx scripts/fetch-flight-data.ts",
     "process-batch": "tsx --no-warnings scripts/process-flight-batch.ts",
+    "test-flight": "tsx scripts/test-single-flight.ts",
     "list-today-invoices": "tsx --no-warnings scripts/list-today-invoices.ts",
     "test": "vitest",
     "test:run": "vitest run",
@@ -60,6 +61,7 @@
     "pino-pretty": "^13.1.3",
     "playwright": "^1.57.0",
     "prisma": "^7.2.0",
+    "qrcode": "^1.5.4",
     "reflect-metadata": "^0.2.2",
     "zod": "^4.3.5"
   },
@@ -75,6 +77,7 @@
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.16.0",
+    "@types/qrcode": "^1.5.6",
     "@vitest/coverage-v8": "^3.0.5",
     "eslint": "^9.18.0",
     "prettier": "^3.4.2",
